fix: stop icons overflowing their container.

--- a/styles/main.css
+++ b/styles/main.css
@@ -174,6 +174,7 @@ footer {
   margin: 0 4px;
   background-color: var(--image-colour-background);
   transition: 500ms ease;
+  max-width: 100%;
 }
 
 .link-icon:hover {
